--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
 </head>
 
-<body class="bg-gray-5100 font-sans leading-normal tracking-normal font-serif">
+<body class="bg-gray-5100 font-sans leading-normal tracking-normal">
 
 	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
