--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="bg-stone-50 font-sans leading-normal tracking-normal font-serif">
+<body class="bg-stone-50 font-sans leading-normal tracking-normal ">
 
 	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
