--- a/Gallery/Health-Education.html
+++ b/Gallery/Health-Education.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="../public/image/logo.png" />
 </head>
 
-<body class="bg-white font-sans leading-normal tracking-normal font-serif">
+<body class="bg-white font-sans leading-normal tracking-normal ">
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
@@ -20,7 +20,7 @@
             class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 header-background">
             <div class="flex flex-row items-center justify-between">
 
-                <a href="index.html"><img src="../public/image/logo.png" alt="logo" class="h-full w-20"></a>
+                <a href="../index.html"><img src="../public/image/logo.png" alt="logo" class="h-full w-20"></a>
 
 
                 <button aria-label="hamberger-btn" class="md:hidden rounded-lg focus:outline-none focus:shadow-outline"
