contact us link to header

--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,10 @@
                     href="team.html">Team</a>
 
                 <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="new-gallery.html">Gallery</a>
 
-                    <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="../contact.html">Contact Us</a>
+                <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                    href="#">Contact Us</a>
 
                 <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="donate.html">Donate</a>
@@ -66,111 +66,65 @@
     </div>
     <!-- **** Header section end *** -->
 
+    <!-- contact section -->
+    <div class="bg-white px-6 py-24 sm:py-32 lg:px-8">
 
-    <!-- gallery -->
-    <div class="bg-white">
-        <h2 class="pt-12 text-center text-3xl">Gallery</h2>
+        <div class="mx-auto max-w-2xl text-center">
+            <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact Us</h2>
 
-        <div class="mx-auto max-w-2xl px-8 py-8 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-
-            <div class="grid grid-cols-1 gap-x-6 gap-y-14 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-20">
-                <!-- card-1 -->
-                <a href="./Gallery/women-empowerment.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Women Empowerment</h3>
-                </a>
-
-                <!-- card-2 -->
-                <a href="./Gallery/child-development.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-3.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Child Development</h3>
-                </a>
-
-                <!-- card-3 -->
-                <a href="./Gallery/specially-abled.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-6.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Specially Abeled</h3>
-                </a>
-
-
-                <!-- card-4 -->
-                <a href="./Gallery/Legal-aid.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-47.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Legal Aid</h3>
-                </a>
-
-                <!-- card-5 -->
-                <a href="./Gallery/Health-Education.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-20.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Health Education</h3>
-                </a>
-
-
-                <!-- card-6 -->
-                <a href="./Gallery/EcoRestoration.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-35.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">EnvRestoration Project</h3>
-                </a>
-
-                <!-- card-7 -->
-                <a href="./Gallery/news-media.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/news/news-img3.jpg"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">News Media</h3>
-                </a>
-
-
-                <!-- card-8 -->
-                <a href="./Gallery/awards-acheivements.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/certificates/certi 9.jpg"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center group-hover:opacity-75 ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Awards and Acheivements</h3>
-                </a>
-
-
-                <!-- More products... -->
-            </div>
         </div>
+
+        <!-- form -->
+        <form action="https://formsubmit.co/your@email.com" method="POST" class="mx-auto mt-14 max-w-xl sm:mt-20">
+            <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+                <div>
+                    <label for="first-name" class="block text-sm font-semibold leading-6 text-gray-900">First
+                        name</label>
+                    <div class="mt-2.5">
+                        <input type="text" name="first-name" id="first-name" autocomplete="given-name"
+                            class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
+                </div>
+                <div>
+                    <label for="last-name" class="block text-sm font-semibold leading-6 text-gray-900">Last name</label>
+                    <div class="mt-2.5">
+                        <input type="text" name="last-name" id="last-name" autocomplete="family-name"
+                            class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
+                </div>
+                <div class="sm:col-span-2">
+                    <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Company</label>
+                    <div class="mt-2.5">
+                        <input type="text" name="company" id="company" autocomplete="organization"
+                            class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
+                </div>
+                <div class="sm:col-span-2">
+                    <label for="email" class="block text-sm font-semibold leading-6 text-gray-900">Email</label>
+                    <div class="mt-2.5">
+                        <input type="email" name="email" id="email" autocomplete="email"
+                            class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
+                </div>
+
+                <div class="sm:col-span-2">
+                    <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Message</label>
+                    <div class="mt-2.5">
+                        <textarea name="message" id="message" rows="4"
+                            class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                    </div>
+                </div>
+            </div>
+
+            <!-- submit -->
+            <div class="mt-10">
+                <button type="submit"
+                    class="block w-full donate rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-red-600 ">
+                    Submit</button>
+            </div>
+        </form>
     </div>
-    <!-- gallery end -->
+    <!-- contact end -->
 
 
     <!-- footer  -->
