--- a/donate.html
+++ b/donate.html
@@ -65,7 +65,12 @@
 		</div>
 	</div>
 	<!-- **** Header section end *** -->
+ 	<!-- hero  start-->
+	<section class="flex justify-center lg:my-8 my-4 mx-4">
+		<img class="shadow-2xl rounded-md h-3/4 w-3/4 max-w-4xl" src="./public/image/donate-hero.jpg" alt="donate-hero">
 
+	</section>
+	<!-- hero end-->
 	<!-- Account Details -->
 	<div class="flex justify-center py-12  ">
 		<div class=" p-6">
