--- a/donate.html
+++ b/donate.html
@@ -71,8 +71,11 @@
 
 	</section>
 	<!-- hero end-->
+
+
+	
 	<!-- Account Details -->
-	<div class="flex justify-center py-12  ">
+	<!-- <div class="flex justify-center py-12  ">
 		<div class=" p-6">
 			<div>
 				<h1 class="font-bold pb-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Donation Account
@@ -87,7 +90,7 @@
 				<h3>Branch : Bargi Nagar</h3>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 
