updated nav and footer in every page

--- a/gallery.html
+++ b/gallery.html
@@ -148,16 +148,19 @@
 
 
     <!-- footer  -->
-    <footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
+    
+    <div class="border-4 border-orange-400 border-back-color"></div>
+
+    <footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
         <!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
-        <div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-white">
+        <div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-black">
             <div class="">
                 <div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
                     <!-- 1111 -->
                     <div class="mt-2 xl:mt-0 max-w-xl">
-                        <h3 class="text-lg font-semibold leading-6 text-white">Address</h3>
-                        <p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
+                        <h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
+                        <p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
                             Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
 
                             <!-- <a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
@@ -167,7 +170,7 @@
                     </div>
 
                     <!-- 22222 -->
-                    <div class="mt-2 xl:mt-0 text-white">
+                    <div class="mt-2 xl:mt-0 text-black">
                         <h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
                         <p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153, 6263797445</p>
                         <p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
@@ -177,9 +180,9 @@
             </div>
 
 
-            <div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
+            <div class="mt-16 border-t border-black pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
                 <div class="flex space-x-6 md:order-2">
-                    <a href="https://www.facebook.com/parwez.khan.1671 " class="text-white hover:text-red-600">
+                    <a href="https://www.facebook.com/parwez.khan.1671 " class="text-gray-500 hover:text-green-600">
                         <span class="sr-only">Facebook</span>
                         <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -188,7 +191,7 @@
                         </svg>
                     </a>
 
-                    <a href=" " class="text-white hover:text-red-600">
+                    <a href=" " class="text-gray-500 hover:text-green-600">
                         <span class="sr-only">Twitter</span>
                         <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path
@@ -206,12 +209,12 @@
                     </a> -->
                 </div>
                 <div>
-                    <p class="mt-8 mb-2 text-base leading-5 text-white md:order-1 md:mt-0 font-family-class">&copy;
+                    <p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
                         Copyright
                         Sachcha Prayas
                         - All rights reserved.</p>
 
-                    <p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-white font-family-class">
+                    <p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
                         built with 💙 by <a
                             href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
                             target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
@@ -225,6 +228,7 @@
             </div>
         </div>
     </footer>
+
 
 
     <script src="index.js"></script>
