--- a/Gallery/awards-acheivements.html
+++ b/Gallery/awards-acheivements.html
@@ -15,17 +15,17 @@
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-    <div class="w-full text-gray-300 bg-white drop-shadow-md font-family-class">
+    <div class="w-full text-gray-300  font-family-class fixed top-0 left-0  bg-white text-white md:right-0">
         <div x-data="{ open: false }"
-            class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 header-background">
+            class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 ">
             <div class="flex flex-row items-center justify-between">
 
-                <a href="../index.html"><img src="../public/image/logo.png" alt="logo" class="h-full w-20"></a>
+                <a href="../index.html"><img src="public/image/logo.png" alt="logo" class="h-full w-20"></a>
 
 
                 <button aria-label="hamberger-btn" class="md:hidden rounded-lg focus:outline-none focus:shadow-outline"
                     @click="open = !open">
-                    <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6 text-white">
+                    <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6 text-red-600">
                         <path x-show="!open" fill-rule="evenodd"
                             d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
                             clip-rule="evenodd"></path>
@@ -39,30 +39,31 @@
 
             <nav :class="{'flex': open, 'hidden': !open}"
                 class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
-                <a class="px-4 py-2 mt-2 text-base  text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                <a class="px-4 py-2 mt-2 nav-link-color text-lg  rounded-lg  md:mt-0 hover:text-red-600 hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="../index.html">Home</a>
 
-                <a class="px-4 py-2 mt-2 text-base  text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                <a class="px-4 py-2 mt-2 nav-link-color text-lg  rounded-lg  md:mt-0 hover:text-red-600 hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="../about.html">About Us</a>
 
                 <!-- **** -->
 
-                <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50     md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50     md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="../our-work.html">Our Work</a>
 
-                <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="../team.html">Team</a>
 
-                <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="../new-gallery.html">Gallery</a>
+                <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                    href="#">Gallery</a>
 
-                <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="../contact.html">Contact Us</a>
-
-                <a class="text-white px-4 py-2 mt-2 text-base  bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="../donate.html">Donate</a>
             </nav>
         </div>
+
+        <!-- red border -->
+        <div class="border-4 border-orange-400 border-back-color"></div>
+
     </div>
     <!-- **** Header section end *** -->
 
@@ -145,85 +146,89 @@
     <!-- Award-achivements end -->
 
 
-    <!-- footer  -->
-    <footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
-        <!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
-        <div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-white">
-            <div class="">
-                <div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
+   <!-- footer  -->
+    
+   <div class="border-4 border-orange-400 border-back-color"></div>
 
-                    <!-- 1111 -->
-                    <div class="mt-2 xl:mt-0 max-w-xl">
-                        <h3 class="text-lg font-semibold leading-6 text-white">Address</h3>
-                        <p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
-                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
+   <footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
+       <!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
+       <div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-black">
+           <div class="">
+               <div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
-                            <!-- <a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
-                                online.</a> -->
-                        </p>
+                   <!-- 1111 -->
+                   <div class="mt-2 xl:mt-0 max-w-xl">
+                       <h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
+                       <p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
+                           Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
 
-                    </div>
+                           <!-- <a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
+                               online.</a> -->
+                       </p>
 
-                    <!-- 22222 -->
-                    <div class="mt-2 xl:mt-0 text-white">
-                        <h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
-                        <p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153, 6263797445</p>
-                        <p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
+                   </div>
 
-                    </div>
-                </div>
-            </div>
+                   <!-- 22222 -->
+                   <div class="mt-2 xl:mt-0 text-black">
+                       <h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
+                       <p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153, 6263797445</p>
+                       <p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
+
+                   </div>
+               </div>
+           </div>
 
 
-            <div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
-                <div class="flex space-x-6 md:order-2">
-                    <a href="https://www.facebook.com/parwez.khan.1671 " class="text-white hover:text-red-600">
-                        <span class="sr-only">Facebook</span>
-                        <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </a>
+           <div class="mt-16 border-t border-black pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
+               <div class="flex space-x-6 md:order-2">
+                   <a href="https://www.facebook.com/parwez.khan.1671 " class="text-gray-500 hover:text-green-600">
+                       <span class="sr-only">Facebook</span>
+                       <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                           <path fill-rule="evenodd"
+                               d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                               clip-rule="evenodd" />
+                       </svg>
+                   </a>
 
-                    <a href="https://twitter.com/ParwezK95223012?t=SGCjrmmjOHceOGq_OJyJtw&s=08 "
-                        class="text-white hover:text-red-600">
-                        <span class="sr-only">Twitter</span>
-                        <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                            <path
-                                d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
-                        </svg>
-                    </a>
+                   <a href=" " class="text-gray-500 hover:text-green-600">
+                       <span class="sr-only">Twitter</span>
+                       <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                           <path
+                               d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+                       </svg>
+                   </a>
 
-                    <!-- <a href="" class="text-white hover:text-sky-600">
-                        <span class="sr-only">YouTube</span>
-                        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </a> -->
-                </div>
-                <div>
-                    <p class="mt-8 mb-2 text-base leading-5 text-white md:order-1 md:mt-0 font-family-class">&copy;
-                        Copyright
-                        Sachcha Prayas
-                        - All rights reserved.</p>
+                   <!-- <a href="" class="text-white hover:text-sky-600">
+                       <span class="sr-only">YouTube</span>
+                       <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                           <path fill-rule="evenodd"
+                               d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z"
+                               clip-rule="evenodd" />
+                       </svg>
+                   </a> -->
+               </div>
+               <div>
+                   <p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
+                       Copyright
+                       Sachcha Prayas
+                       - All rights reserved.</p>
 
-                    <p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-white font-family-class">
-                        built with 💙 by <a
-                            href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
-                            target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
-                            Fellows</a> &
-                        Hosted Freely on <a href="" class="li-text-color hover:donate-color hover:underline">Github
-                            Pages</a>
-                        </a>
-                    </p>
+                   <p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
+                       built with 💙 by <a
+                           href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
+                           target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
+                           Fellows</a> &
+                       Hosted Freely on <a href="" class="li-text-color hover:donate-color hover:underline">Github
+                           Pages</a>
+                       </a>
+                   </p>
 
-                </div>
-            </div>
-        </div>
-    </footer>
+               </div>
+           </div>
+       </div>
+   </footer>
+
+
 
 
     <script src="index.js"></script>
