Home Page-fixed hero image, Our Work- Image, About- Hero Image,

--- a/about.html
+++ b/about.html
@@ -116,11 +116,11 @@
 
 	<!-- mission vision section   -->
 	<section>
-		<div class="mx-auto max-w-8xl container lg:px-6 px-4 py-12">
+		<div class="mx-auto max-w-8xl  lg:px-6 px-4 py-12">
 
 			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
 				<!-- Mission -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class="font-semibold leading-7">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
 						</p>
@@ -131,7 +131,7 @@
 				</div>
 
 				<!-- vision -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
 						</p>
@@ -143,7 +143,7 @@
 				</div>
 
 				<!-- Objective -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
 							Objective
