--- a/gallery.html
+++ b/gallery.html
@@ -74,9 +74,10 @@
     <div class=" bg-white">
 
         <div class="mx-auto max-w-2xl px-4 py-12 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-            <h2 class="pt-12 text-center text-3xl">Gallery</h2>
-
+            <!-- <h2 class="pt-12 text-center text-3xl">Gallery</h2> -->
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
+
+                <!-- div-1 -->
                 <a href="#" class="group">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
@@ -87,6 +88,8 @@
                     <h3 class="mt-4 text-sm text-gray-700 text-center">Earthen Bottle</h3>
                 </a>
 
+
+                <!-- div-2 -->
                 <a href="#" class="group">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
@@ -97,6 +100,8 @@
                     <h3 class="mt-4 text-sm text-gray-700 text-center">Nomad Tumbler</h3>
                 </a>
 
+
+                <!-- div-3 -->
                 <a href="#" class="group">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
@@ -106,7 +111,9 @@
                     </div>
                     <h3 class="mt-4 text-sm text-gray-700 text-center">Focus Paper Refill</h3>
                 </a>
+                
 
+                <!-- div-4 -->
                 <a href="#" class="group">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
@@ -116,6 +123,7 @@
                     </div>
                     <h3 class="mt-4 text-sm text-gray-700 text-center">Machined Mechanical Pencil</h3>
                 </a>
+                <!-- div-5 -->
 
                 <a href="#" class="group">
                     <div
@@ -126,6 +134,8 @@
                     </div>
                     <h3 class="mt-4 text-sm text-gray-700 text-center">Focus Paper Refill</h3>
                 </a>
+
+                <!-- div-6 -->
 
                 <a href="#" class="group">
                     <div
@@ -148,7 +158,7 @@
 
 
     <!-- footer  -->
-    
+
     <div class="border-4 border-orange-400 border-back-color"></div>
 
     <footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
