--- a/new-gallery.html
+++ b/new-gallery.html
@@ -70,7 +70,7 @@
 
     <!-- gallery -->
     <div class="bg-white">
-        <h2 class="pt-12 text-center text-3xl">Gallery</h2>
+        <!-- <h2 class="pt-12 text-center text-3xl">Gallery</h2> -->
 
         <div class="mx-auto max-w-2xl px-8 py-8 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
